[metadata]
name='firebase_rtdb_pagination',
packages=['firebase_rtdb_pagination'],
version='1.0.1',
license='MIT',
description='Firebase Realtime DB Pagination',
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author='Jay Milagroso',
author_email='j.milagroso@gmail.com',
url='https://github.com/jmilagroso/firebase_rtdb_pagination',
download_url='https://github.com/jmilagroso/firebase_rtdb_pagination/archive/refs/tags/1.0.1.tar.gz',
keywords=
    'Firebase',
    'RealtimeDB',
    'Pagination'],
install_requires=['firebase-admin'],
classifiers=
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Build Tools',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
